# CS5394-project

./: .gitignore  LICENSE  README.md  config.txt  newcar.py  pyproject.toml
configs/: config.txt
docs/: architecture.md  how-learning-works.md
kiro_ai_car_prompts/: 00-implementation-guide.md
kiro_ai_car_prompts/prompts/: 01-architecture-and-project-setup.md  02-python-dependencies-and-tooling.md  03-domain-track.md  04-domain-vehicle-state.md  05-domain-sensor-reading.md  06-domain-simulation-config.md  07-core-vector-utils.md  08-core-collision-service.md  09-core-radar-sensor.md  10-core-car-entity.md  11-ai-driver-interface.md  12-ai-neat-driver.md  13-ai-training-manager.md  14-ai-replay-genome-loader.md  15-ui-hud-view.md  16-ui-menu-controller.md  17-simulation-engine.md  18-analytics-run-metrics.md  19-persistence-save-load.md  20-main-app-bootstrap.md  22-class-diagram-and-docs.md  (+10 more)
tests/: __init__.py  test_ai_driver_interface.py  test_ai_neat_driver.py  test_ai_replay_loader.py  test_ai_training_manager.py  test_analytics_run_metrics.py  test_core_car.py  test_core_collision_service.py  test_core_radar_sensor.py  test_core_vector_utils.py  test_domain_sensor_reading.py  test_domain_simulation_config.py  test_domain_track.py  test_domain_vehicle_state.py  test_main_bootstrap.py  test_neat_driver.py  test_persistence.py  test_persistence_save_load.py  test_properties.py  test_simulation_controls.py  test_simulation_engine.py  test_track.py  test_ui_hud_view.py  test_ui_menu_controller.py  test_ui_photo_mode.py  test_vector_utils.py  test_vehicle_state.py
(+33 files in other folders)
