[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-car-sim"
version = "0.1.0"
dependencies = ["neat-python", "pygame"]

[project.optional-dependencies]
test = ["hypothesis", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
